--- a/backend_sanity/package.json
+++ b/backend_sanity/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "sanity-plugin-dashboard-widget-netlify": "^1.3.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {}
